--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
     <script>
         // เชื่อมต่อ HiveMQ public broker ผ่าน WebSocket (port 8000)
-        const brokerUrl = 'ws://broker.hivemq.com:8000/mqtt';
+        const brokerUrl = 'wss://broker.hivemq.com:8000/mqtt';
         const topicLevel = 'water_tank/level';
         const topicCommands = 'water_tank/commands';
 
