--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <script>
         // เปลี่ยนเป็น Mosquitto WebSocket broker
         const brokerUrl = 'ws://test.mosquitto.org:8080/mqtt';
-        const topicLevel = 'water_tank/level';
-        const topicCommands = 'water_tank/commands';
+        const topicLevel = 'water_tank_1997_bang/level';
+        const topicCommands = 'water_tank_1997_bang/commands';
 
         const client = mqtt.connect(brokerUrl);
 
